force-app/main/default/objects/Lead/fields/Country_Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Alpha3Code__c</fullName>
    <label>Country Alpha3Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>