force-app/main/default/objects/Lead/fields/Country_Capital__c.field-meta.xml
<CustomField>
    <fullName>Country_Capital__c</fullName>
    <label>Country Capital</label>
    <length>81</length>
    <type>Text</type>
</CustomField>