force-app/main/default/objects/Lead/fields/Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Region__c</fullName>
    <label>Country Region</label>
    <length>18</length>
    <type>Text</type>
</CustomField>